--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      UniTrack
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -9,6 +9,8 @@
 <ion-content padding>
   <h3>Current Latitude: {{locationTracker.lat}}</h3>
   <h3>Current Longitude: {{locationTracker.lng}}</h3>
+  <h3>Time: {{locationTracker.timestamp}}</h3>
   <button ion-button full primary (click)="start()">Start Tracking</button>
   <button ion-button full primary (click)="stop()">Stop Tracking</button>
+
 </ion-content>
