--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,12 @@
+<ion-content>
+</ion-content>
+
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      UniTrack
-    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon color="primary" name="menu"></ion-icon>
+    </button>
+    <ion-title class="page-title">UniTrack</ion-title>
   </ion-navbar>
 </ion-header>
 
