--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -19,12 +19,38 @@
 <ion-content padding>
   <div class="list card">
     <div class="item item-body">
+      <form [formGroup]="signupForm" (submit)="signupUser()" novalidate>
+
+        <ion-item>
+          <ion-label style="color: #488aff" floating>Email</ion-label>
+          <ion-input formControlName="email" type="email"
+            [class.invalid]="!signupForm.controls.email.valid && signupForm.controls.email.dirty"></ion-input>
+        </ion-item>
+        <ion-item class="error-message" *ngIf="!signupForm.controls.email.valid  && signupForm.controls.email.dirty">
+          <p>Please enter a valid email.</p>
+        </ion-item>
+
+        <ion-item>
+          <ion-label style="color: #488aff" floating>Password</ion-label>
+          <ion-input formControlName="password" type="password" 
+            [class.invalid]="!signupForm.controls.password.valid && signupForm.controls.password.dirty"></ion-input>
+        </ion-item>
+        <ion-item class="error-message" *ngIf="!signupForm.controls.password.valid  && signupForm.controls.password.dirty">
+          <p>Your password needs more than 6 characters.</p>
+        </ion-item>
+
+        <button ion-button block type="submit">
+          Register
+        </button>
+
+      </form>
       <!--<ion-content>-->
-      <ion-list>
+      <!-- <ion-list>
 
         <ion-item>
           <ion-label style="color: #488aff" floating>Email Address</ion-label>
-          <ion-input type="text" [(ngModel)] ='user.email'></ion-input>
+          <ion-input type="text" [(ngModel)] ='user.email' [class.invalid]="!signupForm.controls.email.valid && signupForm.controls.email.dirty">
+          </ion-input>
         </ion-item>
 
         <ion-item>
@@ -40,8 +66,8 @@
       </ion-list>
 
       <div padding>
-        <button ion-button color="primary" (click)="signUp(user)" block text-capitalize>Sign Up</button>
-      </div>
+        <button ion-button color="primary" (click)="registerUser(user)" block text-capitalize>Sign Up</button>
+      </div> -->
       <!--</ion-content>-->
 
       <div class="card btn-down" >
