--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,25 +19,36 @@
 <ion-content padding>
   <div class="list card">
     <div class="item item-body">
-      <!--<ion-content>-->
-        <ion-list>
+      <form [formGroup]="loginForm" (submit)="loginUser()" novalidate>
 
-          <ion-item>
-            <ion-label style="color: #488aff" floating>Email address</ion-label>
-            <ion-input type="text" [(ngModel)]='user.email'></ion-input>
-          </ion-item>
+        <ion-item>
+          <ion-label style="color: #488aff" floating>Email</ion-label>
+          <ion-input #email formControlName="email" type="email"
+            [class.invalid]="!loginForm.controls.email.valid &&
+              loginForm.controls.email.dirty"></ion-input>
+        </ion-item>
+        <ion-item class="error-message" *ngIf="!loginForm.controls.email.valid  &&
+          loginForm.controls.email.dirty">
+          <p>Please enter a valid email.</p>
+        </ion-item>
 
-          <ion-item>
-            <ion-label style="color: #488aff" floating>Password</ion-label>
-            <ion-input type="password" [(ngModel)]='user.password'></ion-input>
-          </ion-item>
-
-        </ion-list>
-
-        <div padding>
-          <button ion-button color="primary" (click)="login(user)" block text-capitalize>Sign In</button>
+        <ion-item>
+          <ion-label style="color: #488aff" floating>Password</ion-label>
+          <ion-input #password formControlName="password" type="password"
+            [class.invalid]="!loginForm.controls.password.valid &&
+              loginForm.controls.password.dirty"></ion-input>
+        </ion-item>
+        <ion-item class="error-message" *ngIf="!loginForm.controls.password.valid  &&
+          loginForm.controls.password.dirty">
+          <p>Your password needs more than 6 characters.</p>
+        </ion-item>
+        <div class="login-button" padding>
+            <button ion-button color="primary" block type="submit" text-capitalize>
+              Sign In
+            </button>
         </div>
-      <!--</ion-content>-->
+      </form>
+
     </div>
     <div class="div-center">
       <button ion-button clear>
@@ -48,10 +59,10 @@
       </button>
     </div>
     <div class="card btn-down" >
-      <button ion-button clear text-capitalize on-click="signUp()">Or Sign Up</button>
+      <button ion-button clear text-capitalize on-click="goToSignUp()">Or Sign Up</button>
     </div>
     <div style="text-align: center; align-items: center">
-          <button ion-button clear text-capitalize>Forgot Your Password?</button>
+          <button ion-button clear text-capitalize (click)="goToResetPassword()">Forgot Your Password?</button>
     </div>
   </div>
 
